<resources>
    <string name="app_name">"PubkeyGenerator"</string>
    <string name="title_activity_pubkey_generator">"PubkeyGeneratorActivity"</string>
    <string name="key_status_none">No key yet — tap Generate or Import below.</string>
    <string name="key_status_ready">✅ Key ready — use Copy / Share / Save to export the public key.</string>
    <string name="key_status_locked">Key exists but is locked. Enter passphrase and tap Decrypt.</string>
    <string name="prompt_file_name">"File name to save in Download directory"</string>
    <string name="prompt_file_will_be_saved">"File will be saved into or read from Download directory."</string>
    <string name="prompt_passphrase">"Passphrase"</string>
    <string name="prompt_type">"Type"</string>
    <string name="prompt_password_can_be_blank">"Passphrase can be blank but key is not encrypted"</string>
    <string name="prompt_bits">"Bits"</string>
    <string name="gather_entropy">"Improving Randomness"</string>
    <string name="generating">"Generating key pair..."</string>
    <string name="generated">"Successfully Generated Key"</string>
    <string name="generate">"Generate New Key"</string>
    <string name="copy">"Copy to Clipboard"</string>
    <string name="save">"Save Public Key to File"</string>
    <string name="share">"Share Public Key"</string>
    <string name="share_chooser_title">"Share Public Key"</string>
    <string name="decrypt">"Decrypt Current Key"</string>
    <string name="key_import">"Import"</string>
    <string name="key_type_rsa">"RSA"</string>
    <string name="key_type_dsa">"DSA"</string>
    <string name="touch_prompt">"Touch this box to gather randomness: %1$d%% done"</string>
    <string name="touch_hint">"In order to ensure randomness during the key generation, move your finger randomly over the box below."</string>
    <string name="menu_settings">"Settings"</string>
    <string name="error_importing">"Failed to recover key-pair from file. Supported formats are encrypted/unencrypted RSA key in PEM format or unencrypted RSA/DSA key in PKCS8 format. Keys generated with 'ssh-keygen -t rsa -m PEM' are known to work."</string>
    <string name="error_reading_file">"Failed to read specified file. Please ensure it is present in your Download directory. The file name specified: "</string>
    <string name="error_decrypting">"Failed to decrypt PEM. It is encrypted, but wrong passphrase was specified. Please specify correct passphrase in the appropriate field, and import again."</string>
    <string name="success_importing">"Successfully imported key from file."</string>
    <string name="success_decrypting">"Successfully decrypted key."</string>
    <string name="error_decrypting_key">"Could not decrypt key. Please enter correct passphrase and try decrypting again."</string>
    <string name="key_not_generated_yet">"Key not generated yet. Set parameters and tap \'Generate New Key\'."</string>
    <string name="copied_to_clipboard">"The public key was copied to the clipboard."</string>
    <string name="enter_filename">"Please enter file name."</string>
    <string name="error_writing_file">"Failed to write file: "</string>
    <string name="success_writing_file">"Successfully wrote public key to file: "</string>
</resources>